# datetime-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  coverage.yaml  release.yaml
codegen/: Cargo.toml  README.md
codegen/src/: lib.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: db.rs  duckdb.rs  format.rs  interval.rs  lib.rs  serde.rs
