[package]
name = "datetime-rs"
version = "0.2.0"
edition = "2021"
authors = ["Luke Sneeringer <luke@sneeringer.com>"]
description = "Date and time"
keywords = ["date", "time"]
categories = ["date-and-time"]
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/lukesneeringer/datetime-rs"
documentation = "https://docs.rs/datetime_rs"
readme = "README.md"
exclude = [
  "/.github/*",
  "/rustfmt.toml",
  "/.prettierrc.yaml",
]

[lib]
name = "datetime"

[dependencies]
date-rs = { version = "1", default-features = false }
diesel = { version = "2", optional = true }
serde = { version = "1", optional = true }
strptime = "1"
tz-rs = { version = "0.6", optional = true }
tzdb = { version = "0.6", optional = true, features = ["local"] }

[dev-dependencies]
assert2 = "0.3"
serde = { version = "1", features = ["derive"] }
serde_test = { version = "1" }

[features]
default = ["serde"]
diesel-pg = ["date-rs/diesel-pg", "dep:diesel", "diesel/postgres"]
serde = ["dep:serde", "date-rs/serde"]
tz = ["dep:tz-rs", "dep:tzdb", "date-rs/tz"]
