[package]
name = "datetime-rs"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
exclude = ["/.github/*", "/rustfmt.toml", "/.prettierrc.yaml"]

[lib]
name = "datetime"

[dependencies]
date-rs = { version = "1.3", default-features = false }
datetime-rs-codegen = { workspace = true, optional = true }
datetime-rs-macros = { workspace = true, optional = true }
diesel = { version = "2", optional = true }
duckdb = { version = "1", optional = true }
log = { version = "0.4", features = ["kv"], optional = true }
serde = { version = "1", optional = true }
strptime = "1.1.3"
syn = { version = "2", features = ["parsing"], optional = true }

[dev-dependencies]
assert2 = "0.3"
duckdb = { version = "1", features = ["bundled"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_test = { version = "1" }

[features]
default = ["macros", "serde"]
diesel-pg = ["date-rs/diesel-pg", "dep:diesel", "diesel/postgres"]
duckdb = ["dep:duckdb", "date-rs/duckdb"]
macros = ["dep:datetime-rs-macros"]
log = ["dep:log", "date-rs/log"]
serde = ["dep:serde", "date-rs/serde"]
syn = ["dep:syn", "dep:datetime-rs-codegen"]
tz = ["date-rs/tz"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[workspace]
members = ["codegen", "macros"]
resolver = "3"

[workspace.package]
version = "1.11.0"
edition = "2024"
rust-version = "1.85"
authors = ["Luke Sneeringer <luke@sneeringer.com>"]
description = "Date and time"
keywords = ["date", "time"]
categories = ["date-and-time"]
license = "MIT"
repository = "https://github.com/lukesneeringer/datetime-rs"
documentation = "https://docs.rs/datetime_rs"

[workspace.dependencies]
datetime-rs-codegen = { version = "1.11", path = "codegen" }
datetime-rs-macros = { version = "1.11", path = "macros" }
